# build-my-own-x

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: 6.824.yaml  lg.yaml  lr.yaml  lt.yaml  main.yml  mr.yml  my-std.yaml  raft.yml  rq.yaml  tr.yaml
6.824/: LICENSE
blog_os/: .gitignore  Cargo.toml
blog_os/src/: main.rs
blog_os/version1/: .gitignore
ds/: README.md
le/: .gitignore  mix.exs
le/lib/: q_0020_valid_parentheses.ex  q_0094_inorder_traversal.ex  q_0121_max_profit.ex  q_0144_preorder_traversal.ex  q_0145_postorder_traversal.ex  q_0167_two_sum_ii.ex  q_0206_reverse_list.ex  q_0740_binary_search.ex
le/test/: q_0020_valid_parentheses_test.exs  q_0094_inorder_traversal_test.exs  q_0121_max_profit_test.exs  q_0144_preorder_traversal_test.exs  q_0145_postorder_traversal_test.exs  q_0167_two_sum_ii_test.exs  q_0206_reverse_list_test.exs  q_0740_binary_search_test.exs
lg/: go.mod  go.sum
lr/: README.md
lr/src/: lib.rs
lt/: package.json  pnpm-lock.yaml
lt/src/: q-242-valid-anagram.test.ts  q-242-valid-anagram.ts  q-270-contains-duplicate.test.ts  q-290-word-pattern.test.ts  (+43 more)
my-std/: Cargo.toml
query-engine/: Cargo.toml  README.md
retcd/: Cargo.toml  LICENSE  README.md
rq/: Cargo.toml  README.md
src/: .gitignore  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
tcp-rs/: Cargo.toml  run.sh
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
tr/: .gitignore  package.json  tsconfig.json
tr1/: tsconfig.json  vite.config.ts
(+656 files in other folders)
