[package]
name = "blog_os"
version = "0.1.0"
authors = ["Rustin-Liu <rustin.liu@gmail.com>"]
edition = "2018"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
